--- a/infra/mythical-mysfits/core.yml
+++ b/infra/mythical-mysfits/core.yml
@@ -349,7 +349,9 @@ Resources:
             Resource: "*"
             Effect: Allow
           - Action:
-            - s3:PutObject
+            - s3:Put*
+            - s3:List*
+            - s3:Get*
             Resource:
             - arn:aws:s3:::*
             Effect: Allow
@@ -359,6 +361,7 @@ Resources:
             - cloudwatch:*
             - ecs:*
             - codebuild:*
+            - codestar-connections:*
             - iam:PassRole
             Resource: "*"
             Effect: Allow
