--- a/infra/mythical-mysfits/core.yml
+++ b/infra/mythical-mysfits/core.yml
@@ -386,6 +386,10 @@ Resources:
         PolicyDocument:
           Version: "2012-10-17"
           Statement:
+          - Effect: Allow
+            Action:
+            - "cloudformation:list-exports"
+            Resource: "*"
           - Effect: "Allow"
             Action:
             - "codecommit:ListBranches"
