--- a/mythical-mysfits/mysfits-service/buildspec.yml
+++ b/mythical-mysfits/mysfits-service/buildspec.yml
@@ -16,6 +16,7 @@ phases:
       - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
   build:
     commands:
+      - source ./bin/_utils.sh
       - cd mythical-mysfits/mysfits-service/
       - pwd
       - echo Build started on `date`
