--- a/mythical-mysfits/streaming-service/buildspec.yml
+++ b/mythical-mysfits/streaming-service/buildspec.yml
@@ -8,10 +8,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      python: 3.5.2
-    commands:
-      - apt-get update -y
-      - apt-get install -y jq 
+      python: 3.8
 
   pre_build:
     commands:
@@ -19,21 +16,26 @@ phases:
       - jq --version
       - pip --version
       - sam --version
+
   build:
     commands:
-    - source ./bin/_utils.sh
     - cd mythical-mysfits/mysfits-streaming-service/
-    - service_api_endpoint=$(get_cfn_export MythicalMysfitsUserPoolStack:ApiEndpoint:ApiEndpoint)
+    - service_api_endpoint=$(aws cloudformation list-exports |
+        jq -c "map(select(.Name==\"MythicalMysfitsUserPoolStack:ApiEndpoint:ApiEndpoint\")| .Value)" |
+        jq -r '.[0]' |
+        sed 's/\//\\\//g')
     - echo "${lambda_artifacts_bucket}"
-    - sed -i "s/apiEndpoint = 'REPLACE_ME_API_ENDPOINT'/apiEndpoint = \'${service_api_endpoint}\'/g" streamProcessor.py
+    - sed -i "s/apiEndpoint = 'REPLACE_ME_API_ENDPOINT'/apiEndpoint = \'${service_api_endpoint}\'/g" ./streamProcessor.py
     - pip install requests -t .
     - sam package \
         --template-file ./real-time-streaming.yml \
         --output-template-file ./transformed-streaming.yml \
         --s3-bucket "${lambda_artifacts_bucket}"
     - cd -
+
   post_build:
     commands:
     - echo "Completed streaming service build on `date`"
+
 artifacts:
   files: ./mythical-mysfits/mysfits-streaming-service/transformed-streaming.yml
