--- a/infra/mythical-mysfits/core.yml
+++ b/infra/mythical-mysfits/core.yml
@@ -388,7 +388,7 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
-            - "cloudformation:list-exports"
+            - "cloudformation:ListExports"
             Resource: "*"
           - Effect: "Allow"
             Action:
