Corrected pipeline output

--- a/infra/mythical-mysfits/streaming-service-cicd.yml
+++ b/infra/mythical-mysfits/streaming-service-cicd.yml
@@ -85,7 +85,7 @@ Resources:
           Configuration:
             ActionMode: REPLACE_ON_FAILURE
             StackName: MythicalMysfitsStreamingServiceLambdaStack
-            TemplatePath: :"StreamingServiceBuildArtifact::transformed-streaming.json"
+            TemplatePath: "StreamingServiceBuildArtifact::transformed-streaming.json"
       ArtifactStore:
         Type: S3
         Location: !ImportValue MythicalMysfitsCICDStack:CodeBuildArtifactsBucket
