--- a/mythical-mysfits/streaming-service/buildspec.yml
+++ b/mythical-mysfits/streaming-service/buildspec.yml
@@ -19,18 +19,26 @@ phases:
 
   build:
     commands:
-    - cd mythical-mysfits/mysfits-streaming-service/
-    - service_api_endpoint=$(aws cloudformation list-exports |
-        jq -c "map(select(.Name==\"MythicalMysfitsUserPoolStack:ApiEndpoint:ApiEndpoint\")| .Value)" |
+    - cd mythical-mysfits/streaming-service/
+    - lambda_artifacts_bucket=$(aws cloudformation list-exports |
+        jq -r '.Exports' |
+        jq -c "map(select(.Name==\"MythicalMysfitsCICDStack:LambdaArtifactsBucket\")| .Value)" |
         jq -r '.[0]' |
         sed 's/\//\\\//g')
     - echo "${lambda_artifacts_bucket}"
+    - service_api_endpoint=$(aws cloudformation list-exports |
+        jq -r '.Exports' |
+        jq -c "map(select(.Name==\"MythicalMysfitsUserPoolStack:ApiEndpoint\")| .Value)" |
+        jq -r '.[0]' |
+        sed 's/\//\\\//g')
+    - echo "${service_api_endpoint}"
     - sed -i "s/apiEndpoint = 'REPLACE_ME_API_ENDPOINT'/apiEndpoint = \'${service_api_endpoint}\'/g" ./streamProcessor.py
-    - pip install requests -t .
-    - sam package \
-        --template-file ./real-time-streaming.yml \
-        --output-template-file ./transformed-streaming.yml \
-        --s3-bucket "${lambda_artifacts_bucket}"
+    - pip install requests==2.23.0 -t .
+    - >-
+      sam package
+      --template-file ./real-time-streaming.yml
+      --output-template-file ./transformed-streaming.yml
+      --s3-bucket "${lambda_artifacts_bucket}"
     - cd -
 
   post_build:
@@ -38,4 +46,4 @@ phases:
     - echo "Completed streaming service build on `date`"
 
 artifacts:
-  files: ./mythical-mysfits/mysfits-streaming-service/transformed-streaming.yml
+  files: ./mythical-mysfits/streaming-service/transformed-streaming.yml
